--- a/hoist_base/config/nav2_params.yaml
+++ b/hoist_base/config/nav2_params.yaml
@@ -18,8 +18,8 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 10000
-    min_particles: 1000
+    max_particles: 6000
+    min_particles: 2000
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -29,7 +29,7 @@ amcl:
     robot_model_type: "omni"
     save_pose_rate: 0.5
     sigma_hit: 0.2
-    tf_broadcast: false
+    tf_broadcast: true
     transform_tolerance: 1.0
     update_min_a: 0.05
     update_min_d: 0.25
