--- a/hoist_base/config/nav2_params_real.yaml
+++ b/hoist_base/config/nav2_params_real.yaml
@@ -18,13 +18,13 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 10000
-    min_particles: 1000
+    max_particles: 6000
+    min_particles: 2000
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
-    recovery_alpha_fast: 0.0
-    recovery_alpha_slow: 0.0
+    recovery_alpha_fast: 0.1
+    recovery_alpha_slow: 0.001
     resample_interval: 1
     robot_model_type: "omni"
     save_pose_rate: 0.5
@@ -105,9 +105,9 @@ controller_server:
   ros__parameters:
     use_sim_time: False
     controller_frequency: 40.0
-    min_x_velocity_threshold: 0.01
+    min_x_velocity_threshold: 0.05
     min_y_velocity_threshold: 0.5
-    min_theta_velocity_threshold: 0.01
+    min_theta_velocity_threshold: 0.1
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
@@ -188,12 +188,12 @@ local_costmap:
       width: 4
       height: 4
       resolution: 0.05
-      robot_radius: 0.36
+      robot_radius: 0.18
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.2
-        inflation_radius: 0.55
+        cost_scaling_factor: 0.01
+        inflation_radius: 0.005
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -210,9 +210,9 @@ local_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 3.0
+          raytrace_max_range: 5.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
+          obstacle_max_range: 5.0
           obstacle_min_range: 0.0
       static_layer:
         map_subscribe_transient_local: True
@@ -232,7 +232,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: False
-      robot_radius: 0.36
+      robot_radius: 0.18
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -255,8 +255,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.2
-        inflation_radius: 0.55
+        cost_scaling_factor: 0.01
+        inflation_radius: 0.005
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
@@ -288,6 +288,7 @@ planner_server:
       tolerance: 0.5
       use_astar: false
       allow_unknown: true
+      use_final_approach_orientation: true
 
 planner_server_rclcpp_node:
   ros__parameters:
